// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SectionHeading /> renders base component correctly 1`] = `
<header
  className="base"
  id="Anti-Oxidant"
>
  <h2
    className="base noTopMargin xLarge dark heading"
  >
    Title: Fortification of the highest order. Parsley Seed Anti-Oxidant Facial Hydrating Cream.
  </h2>
</header>
`;

exports[`<SectionHeading /> renders with subHeading and eyebrow variation correctly 1`] = `
<header
  className="base"
  id="Anti-Oxidant"
>
  <h2
    className="base noTopMargin mediumWeightFont xXSmall dark eyebrow"
  >
    Eyebrow: Offers fortification of the highest order against free radicals.
  </h2>
  <h3
    className="base noTopMargin xLarge dark heading"
  >
    Heading: Fortification of the highest order. Parsley Seed Anti-Oxidant Facial Hydrating Cream.
  </h3>
  <h4
    className="base noTopMargin mediumWeightFont xSmall dark subHeading"
  >
    SubHeading: Parsley Seed Cream. Intensely soothing, nourishing and hydrating, this elegant formulation contains a potent blend of botanicals that offer fortification of the highest order against free radicals.
  </h4>
</header>
`;

exports[`<SectionHeading /> renders with subHeading variation correctly 1`] = `
<header
  className="base"
  id="Parsley"
>
  <h2
    className="base noTopMargin xLarge dark heading"
  >
    Heading: Fortification of the highest order.
  </h2>
  <h3
    className="base noTopMargin mediumWeightFont xSmall dark subHeading"
  >
    Subcopy: Parsley Seed Anti-Oxidant Facial Hydrating Cream 60mL
  </h3>
</header>
`;
